[tool.poetry]
name = "prefect-demo"
version = "0.1.0"
description = ""
authors = ["Lucas Parzianello <lucaspar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "prefect_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.10.17"
polars = "^0.18.4"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
